[package]
name = "i2cdev_bno055"
version = "0.1.3"
authors = ["Benjamin Cheng <ben@bcheng.cf>"]
description = "BNO855 Absolute Orientation Sensor (Accelerometer, Gyroscope, Magnetometer)"
repository = "https://github.com/lolzballs/i2cdev-bno055"
license = "MIT/Apache-2.0"
exclude = [
    "src/bin/*",
    ".cargo/config",
]

[dependencies]
byteorder = "1"
i2cdev = "0.3.1"
i2csensors = "0.1.2"
